<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="zone.com.br.src.view.Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Cadastrar"
            android:textSize="40sp" />

        <EditText
            android:id="@+id/textNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Nome"
            android:inputType="text" />

        <EditText
            android:id="@+id/textUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Usuário"
            android:inputType="text" />


        <EditText
            android:id="@+id/textSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Senha"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/textTelefone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Telefone"
            android:inputType="phone" />

        <EditText
            android:id="@+id/textEndereco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Endereco"
            android:inputType="text" />


        <Switch
            android:id="@+id/switch1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/motorista" />

        <LinearLayout
            android:id="@+id/linearVeiculo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="invisible">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sobreoveiculo"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/textMarca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Marca"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/textModelo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Modelo"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/textAno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Ano"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/textCor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Cor"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/textPlaca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Placa"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/textDetalhes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Detalhes"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnCadastrar"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Cadastrar"
                android:textColor="#1E91D6" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>